crates/edm-core/tests/snapshots/render__market_point_wide_w60.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== MARKETS  3 in Shinrarta Dezhra — 1 filtered out =========
+------------+-------------------------+-------+-----+-----+
|  Market ID | Name                    | CBOYF | Imp | Exp |
+============+=========================+=======+=====+=====+
| ORBIS STARPORT  2 markets                                |
+------------+-------------------------+-------+-----+-----+
| 3229028096 | Jameson Memorial Fleet~ | CBOYF |  44 |  51 |
| 3223343616 | Abraham Lincoln Founde~ | C.O.F | 128 |  96 |
+------------+-------------------------+-------+-----+-----+
| FLEET CARRIER  1 market                                  |
+------------+-------------------------+-------+-----+-----+
| 3700286976 | K7Q-BQL Nostromo        | C.... |   0 |   8 |
+------------+-------------------------+-------+-----+-----+
   columns hidden to fit 60 cols: Body, Faction, Economy,
   Dist (Ls)
