crates/edm-core/tests/snapshots/render__market_point_wide_w80.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== MARKETS  3 in Shinrarta Dezhra — 1 filtered out =============================
+------------+-------------------------------+-------+-----+-----+-------------+
|  Market ID | Name                          | CBOYF | Imp | Exp |   Dist (Ls) |
+============+===============================+=======+=====+=====+=============+
| ORBIS STARPORT  2 markets                                                    |
+------------+-------------------------------+-------+-----+-----+-------------+
| 3229028096 | Jameson Memorial Fleet Landi~ | CBOYF |  44 |  51 |       324.6 |
| 3223343616 | Abraham Lincoln Founders Orb~ | C.O.F | 128 |  96 | 1,204,000.0 |
+------------+-------------------------------+-------+-----+-----+-------------+
| FLEET CARRIER  1 market                                                      |
+------------+-------------------------------+-------+-----+-----+-------------+
| 3700286976 | K7Q-BQL Nostromo              | C.... |   0 |   8 |           - |
+------------+-------------------------------+-------+-----+-----+-------------+
   columns hidden to fit 80 cols: Body, Faction, Economy
