crates/edm-core/tests/snapshots/render__plan_narrow_w80.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== TRADE PLAN ==================================================================
+----------+------------+-------+
| Field    | Value      | From  |
+==========+============+=======+
| type     | buy        | flag  |
| item     | Gold       | flag  |
| qty      | 12         | clamp |
+----------+------------+-------+
